# wasm-opencv-FaceDetectorYN

./: .gitignore  CMakeLists.txt  opencv_perf.cpp  opencv_test.cpp  opencv_wasm.cpp
.devcontainer/: Dockerfile  devcontainer.json
demo/: next.config.js  package.json
demo/lib/: faceDetectTransformer.ts  faceDetectWasmModule.ts  transformStream.ts
demo/pages/: index.tsx
demo/public/wasm/: wasm.js  wasm.wasm  wasm_simd_threads.js  wasm_simd_threads.worker.js  wasm_threads.js  wasm_threads.wasm  wasm_threads.worker.js
